--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,64 @@
-/* CSS HERE */
+/*html {
+ position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  cursor: pointer;
+}*/
+@import "fonts.css";
+
+body {
+     background-size: cover !important;
+     
+}
+
+main {
+	background-color: #e5d0ac;
+	box-shadow: 0px 0px 5px #30C0DB;
+}
+
+ul, div:not(body div) {
+	border-radius: 5px;
+	background-color: #e5d0ac; 
+	margin: 5px;
+	padding-left: 5px;
+	border: solid 2px #30C0DB;
+	box-shadow: 5px 5px 5px #30C0DB;
+}
 
 
-/* Try: updating the background to a gradient */
+h1 {
+	font-family: 'treasuremap', 'normal' !important;
+}
+
+p, a {
+	font-family: 'Treasure Map Deadhand', 'normal' !important;
+	font-size: 20px !important;
+}
+
+a {
+	text-decoration: none;
+	color: #30C0DB !important;
+	border-radius: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+a:hover {
+	border: solid 2px #66512A !important;
+	background-color: #30C0DB !important;
+	color: #66512A !important;
+	border-radius: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+/*#e5d0ac*/
 
 
-/* Try: changing the font styling of h1 or h2 elements */
-
-
-/* Try: targeting one element on a specific site and changing something about it's appearance*/
 
