--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,9 @@
-/*html {
- position: fixed;
-  display: none;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 2;
-  cursor: pointer;
-}*/
 @import "fonts.css";
 
-body {
-     background-size: cover !important;
-}
 
-main {
-	background-color: #e5d0ac;
+
+ body, main {
+	background-color: #e5d0ac !important;
 	box-shadow: 0px 0px 5px #009AB6;
 }
 
@@ -38,7 +24,6 @@ a {
 	font-family: 'Treasure Map Deadhand', 'normal' !important;
 	font-size: 20px !important;
 	text-decoration: none;
-	background-color: #e5d0ac;
 	color: #009AB6 !important;
 	border-radius: 5px;
 	padding-left: 10px;
